@@ -10,7 +10,7 @@ An "real-life" example for adding a ruin set with another mod can be found at [T
 
 ## Step 1: Ruin set setting
 
-The settings should be modified in setting.lua. Make sure to set "AbandonedRuins >= 1.0.0" (this mod) as a dependency.
+The settings should be modified in settings.lua. Make sure to set "AbandonedRuins >= 1.0.0" (this mod) as a dependency.
 
 Add a ruin set name to the setting:
 ```lua
@@ -23,7 +23,7 @@ data.raw["string-setting"]["AbandonedRuins-set"].default_value = "my-ruin-set"
 
 ## Step 2: Ruin set remote interface
 
-Adding a ruin set is a simple as providing the ruins to *The Ruins Mod* via the add_ruin_set remote call in on_init and on_load. For the format of ruins, see [ruin data format](docs/format.md).
+Adding a ruin set is a simple as providing the ruins to *The Ruins Mod* via the add_ruin_set remote call in on_init and on_load in control.lua. For the format of ruins, see [ruin data format](docs/format.md).
 
 Some extra care needs to be taken with ruin sets, as they are not save/loaded. That means they should not be changed during the game.<br>
 For that reason, it is recommended to only add ruin sets in on_init and on_load. Furthermore, it is recommended to not conditionally change ruin sets.
