@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when a ruin was spawned with a invalid recipe.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2020-09-28
